# Periodicity-Research-Tool

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
scripts/: build  format
sprt/: __main__.py  app.py  config.py  logger.py  theme.py
sprt/algorithms/: __init__.py  algorithm.py
sprt/algorithms/system/: __init__.py  pi.py
sprt/analysis/: __init__.py  analysis.py  time_measure.py
sprt/components/: __init__.py  active_label.py  analysis_item_view.py  analysis_window.py  charset_entry.py  checkbox.py  distributionView.py  main_window.py  pattern_generator_window.py  performance_result_window.py  progress_window.py  random_text_view.py  research_panel.py  scrollable_frame.py  selection_list.py  text_field.py  text_set_generator_window.py  text_set_lookup_window.py  top_level_abc.py
sprt/components/charts/: __init__.py  base_chart.py  group_chart.py  histogram.py  performance.py  results_chart.py
sprt/db/: __init__.py  db.py  db_abc.py
sprt/text_generator/: __init__.py  distributions.py  generator.py  random_text.py
sprt/utils/: utils.py
tests/: test_generator.py  test_random_text.py  test_utils.py
tests/algorithms/: test_algorithm.py  test_bf.py  test_rk.py
tests/analysis/: test_time_measure.py
tests/integration/: test_algorithm_analysis.py  test_db_and_generator.py  test_dstribution_generation.py
tests/unit/: test_utils.py
tests/unit/algorithms/: test_algorithm.py  test_bf.py  test_bm.py  test_kmp.py  test_rk.py
tests/unit/analysis/: test_analysis.py  test_time_measure.py
tests/unit/db/: test_db.py
(+3 files in other folders)
